--- a/tabelas/tabela.html
+++ b/tabelas/tabela.html
@@ -1,1 +1,72 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Exemplo 1 - Tabela</h1> <!--Exemplo 1 de tabela-->
+    <table border="2">
+        <tr>
+            <td>Itens/Mês</td>
+            <th>Janeiro</th>
+            <th>Fevereiro</th>
+            <th>Março</th>
+        </tr>
+        <tr>
+            <td>Usuários</td>
+            <th>80</th>
+            <th>93</th>
+            <th>120</th>
+        </tr>
+        <tr>
+            <td>T.linhas</td>
+            <th>3</th>
+            <th>3</th>
+            <th>5</th>
+        </tr>
+    </table>
+    <br>
+    <br>
+    <br>
+
+    <h1>Exemplo 2 - Tabela</h1> <!--Exemplo 2 de tabela-->
+    <table border="2">
+        <tr>
+            <td rowspan=3>3 linhas</td>
+            <td>col-2</td><td>col-3</td>
+            <td>col-4</td><td>col-5</td>
+        </tr>
+        <tr>
+            <td>col-2</td><td>col-3</td>
+            <td>col-4</td><td>col-5</td>
+        </tr>
+        <tr>
+            <td>col-2</td><td>col-3</td>
+            <td>col-4</td><td>col-5</td>
+        </tr>
+    </table>
+    <br>
+    <br>
+    <br>
+
+    <h1>Exemplo 3 - Tabela</h1>
+    <table border="2">
+        <tr>
+            <td colspan=2>2 columas</td>
+            <td>col-3</td>
+            <td>col-4</td><td>col-5</td>
+        </tr>
+        <tr>
+            <td>col-1</td>
+            <td>col-2</td><td>col-3</td>
+            <td>col-4</td><td>col-5</td>
+        </tr>
+        <tr>
+            <td>col-1</td>
+            <td>col-2</td><td>col-3</td>
+            <td>col-4</td><td>col-5</td>
+        </tr>
+</body>
+</html>
