--- a/exemplos/exemplos2.html
+++ b/exemplos/exemplos2.html
@@ -12,7 +12,7 @@
     a usuários do Lucas Vinicius dos Santos
     <H1>ADRESS TAG</H1>
     <address>
-        A Beginner's Guide to HTML / NCSA / lucas_santos100@estudante.sesisenai.org.br
+        A Beginner's Guide to HTML / NCSA / lucas_santos100@estudante.sesisenai.org.br https://www.letras.mus.br/yung-lixo/joias-da-familia-part-maik-sbkaos-biffe-e-hakuro/
     </address>
     <img src="lucas_santos_musica\img\yunli2.jpeg" title="yunli" alt="se falhar" height="340">
 </body>
