--- a/formularios/form01.html
+++ b/formularios/form01.html
@@ -6,7 +6,7 @@
     <title>exemplo01 - formulário</title>
 </head>
 <body>
-    <form action="../lucas_santos_musica/musica.html">
+    <form action="#"> <!-- apos o submit ele nos leva pra alguma pagina da nossa escolha "#" hashtag faz ele ficar na mesma pagina-->
         <label>Usuário
             <input name="nome" placeholder="Usuario" required />
         </label>
