--- a/tabelas/01.html
+++ b/tabelas/01.html
@@ -6,6 +6,9 @@
     <title>Lucas Vinicius</title>
 </head>
 <body>
+    <h1>Lucas Vinicius Dos Santos</h1>
+
+    <br>
 
     <h1>Exercício 01 - Tabela </h1> <!--ex 1 de tabela-->
         <table border="2">
