--- a/textos/textos.html
+++ b/textos/textos.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Frases elementos</h1>
+    <h1>Lucas Vinicius Dos Santos</h1>
+    <br>
+    <h1 >Frases elementos</h1>
 
-    <div style="text-align: center;">
+    <div>
     <em>Texto enfatizado - Emphasized</em>
     <br><br>
     <strong>Texto forte - Strong </strong>
