--- a/menu3.html
+++ b/menu3.html
@@ -45,7 +45,7 @@
             text-align: left;
         }
         
-        .dropdown-content a:hover {background-color: #f1f1f1;}
+        .dropdown-content a:hover {background-color: yellow;}
 
         .dropdown:hover .dropdown-content{display: block;}
 
