--- a/007/cssexterno2.html
+++ b/007/cssexterno2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS EXTERNO</title>
-    <link rel="stylesheet" href="css/estilo2.css"><link>
+    <style type="text/css">@import url("css/estilo2.css") all;</style>
 </head>
 <body>
     <p>Este parágrafo tem cor branca, fundo preto, esta centralizado, fonte Arial Narrow, tem tamanho 15 e está em negrito.</p>
