--- a/LucasVinicius_LayOut/TemplateHTML_CSS.html
+++ b/LucasVinicius_LayOut/TemplateHTML_CSS.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de template</title>
+    <title>Exemplo de template</title> <!--<style type="text/css">@import url("css/meuestilo.css") all;</style>-->
     <style type="text/css">
-        @import url("css/estilo.css"); /*<style type="text/css">@import url("css/meuestilo.css") all;</style>*/
+        @import url("css/estilo.css"); 
     </style>
 </head>
 <body>
@@ -27,6 +27,7 @@
 
     <div id="rodape">
         AQUI FICA O RODAPE DO TEMPLATE
+        <br>
         LUCAS VINICIUS DOS SANTOS
     </div>
 
