--- a/Lucas_Santos_Atividade_08/carrossel.html
+++ b/Lucas_Santos_Atividade_08/carrossel.html
@@ -13,7 +13,15 @@
     </style>
 </head>
 <body>
-
+    <br>
+    <div class="container">
+    <div class="row">
+      <div class="col-3"><a href="notas.html">Notas</a></div>
+      <div class="col-4"><a href="#">Carrossel</a></div>
+      <div class="col-5"><a href="login.html">Formulário</a></div>
+    </div>
+    </div>
+    <br><br>  
     <h1 style="text-align: center;">Carrossel - Aula 8</h1>
     <h2 style="text-align: center;">Lucas Vinicius Dos Santos</h2>
 <div class="container mt-4">
